--- a/main.css
+++ b/main.css
@@ -3,3 +3,24 @@
     padding: 0;
     font-weight: 1;
 }
+@font-face {
+    font-family: 'apparat';
+    src: url(KMR-Apparat-Medium.woff);
+}
+h1 {
+    font-family: apparat, Helvetica, sans-serif;
+    font-size: 0.9rem;
+}
+header {
+    display: grid;
+    grid-template-columns: 1fr 0.9fr 1.3fr 1fr;
+    margin: 1rem;
+    margin-top: 0.7rem;
+}
+header h1 {
+    margin-top: 0.5rem;
+}
+.logo {
+    height: 1.8rem;
+    margin-left: 0.4rem;
+}
