--- a/main.css
+++ b/main.css
@@ -13,9 +13,11 @@ h1 {
 }
 header {
     display: grid;
-    grid-template-columns: 1fr 0.9fr 1.3fr 1fr;
+    grid-template-columns: 1fr 4fr 1fr 1.4fr 1fr;
     margin: 1rem;
     margin-top: 0.7rem;
+    text-align: right;
+    margin-right: 2rem;
 }
 header h1 {
     margin-top: 0.5rem;
@@ -23,4 +25,11 @@ header h1 {
 .logo {
     height: 1.8rem;
     margin-left: 0.4rem;
+}
+
+/* _________ */
+
+header img, h1:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
