--- a/main.css
+++ b/main.css
@@ -11,9 +11,11 @@ h1 {
     font-family: apparat, Helvetica, sans-serif;
     font-size: 0.9rem;
 }
+
+
 header {
     display: grid;
-    grid-template-columns: 0.1fr 4fr 1fr 1.3fr 1fr;
+    grid-template-columns: 4fr 1fr 1.3fr 1fr;
     margin: 1rem;
     margin-top: 0.8rem;
     text-align: right;
