--- a/main.css
+++ b/main.css
@@ -12,22 +12,41 @@ h1 {
     font-size: 0.9rem;
 }
 
+/* _________ */
 
 header {
+    position: sticky;
     display: grid;
-    grid-template-columns: 4fr 1fr 1.3fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     margin: 1rem;
     margin-top: 0.8rem;
-    text-align: right;
-    margin-right: 2rem;
-}
-header h1 {
-    margin-top: 0.3rem;
+    text-align: center;
+    transition: width 0.3s;
 }
 .logo {
     margin-top: 0.2rem;
-    height: 1.3rem;
-    margin-left: 0.4rem;
+    height: 3rem;
+}
+.fixed {
+    width: 6rem;
+    top: 0; 
+    left: 0; 
+    z-index: 1000; 
+}
+
+.content img{
+    padding-right: auto;
+    padding-left: auto;
+}
+
+footer {
+    position: fixed;
+    display:flex;
+    justify-content:center;
+    align-items:flex-end;
+    text-align: center;
+    width: 99.4vw;
+    z-index: 1000;
 }
 
 /* _________ */
