--- a/main.css
+++ b/main.css
@@ -7,9 +7,26 @@
     font-family: 'apparat';
     src: url(KMR-Apparat-Medium.woff);
 }
+@font-face {
+    font-family: 'romek';
+    src: url(d3V2GtHG.woff2);
+}
+@font-face {
+    font-family: 'romek-big';
+    src: url(XPtB-g4g.woff2);
+}
 h1 {
     font-family: apparat, Helvetica, sans-serif;
     font-size: 0.9rem;
+}
+h2 {
+    font-family: romek, 'Times New Roman', Times, serif;
+    font-size: 0.9rem;
+}
+h3 {
+    font-family: romek-big, 'Times New Roman', Times, serif;
+    font-size: 2.5rem;
+    text-align: center;
 }
 
 /* _________ */
@@ -35,18 +52,30 @@ header {
 }
 
 .content img{
-    padding-right: auto;
-    padding-left: auto;
+    display: grid;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 1rem;
+}
+.content h3 {
+    margin-bottom: 3rem;
+}
+.type2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.type2 img {
+    width: 40vw;
 }
 
 footer {
+    display:grid;
     position: fixed;
-    display:flex;
-    justify-content:center;
-    align-items:flex-end;
-    text-align: center;
-    width: 99.4vw;
+    text-align: left;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: auto;
     z-index: 1000;
+    bottom: 0;
 }
 
 /* _________ */
@@ -55,3 +84,6 @@ header img, h1:hover {
     text-decoration: underline;
     cursor: pointer;
 }
+.content img, h1:hover {
+    cursor: pointer;
+} 
