--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ h2 {
 }
 h3 {
     font-family: romek-big, 'Times New Roman', Times, serif;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     text-align: center;
 }
 
@@ -60,6 +60,13 @@ header {
 .content h3 {
     margin-bottom: 3rem;
 }
+.type1 {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+.type1 img {
+    width: 65vw;
+}
 .type2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -69,13 +76,19 @@ header {
 }
 
 footer {
-    display:grid;
+    background-color: white;
+    display:flex;
     position: fixed;
+    justify-content:center;
+    align-items:flex-end;
     text-align: left;
-    grid-template-rows: 1fr 1fr 1fr;
-    width: auto;
+    width: 99.4vw;
     z-index: 1000;
     bottom: 0;
+}
+footer h1 {
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 
 /* _________ */
