--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
 }
 @font-face {
     font-family: 'romek-big';
-    src: url(KMR-Apparat-Medium.woff);
+    src: url(GLECB.woff);
 }
 h1 {
     font-family: apparat, Helvetica, sans-serif;
@@ -25,7 +25,7 @@ h2 {
 }
 h3 {
     font-family: romek-big, 'Times New Roman', Times, serif;
-    font-size: 2rem;
+    font-size: 5rem;
 }
 
 /* _________ */
@@ -37,56 +37,57 @@ header {
     margin: 1rem;
     padding-top: 0.2rem;
     text-align: center;
-    transition: width 0.3s;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
 }
 .logo {
-    height: 4rem;
+    height: 7rem;
 }
 .fixed {
     margin-left:auto;
-    width: 13rem;
+    margin-right: 1.2rem;
+    width: 6rem;
     top: 0.5rem; 
     z-index: 1000;
 }
+.fixed img {
+    transform: translateY(-4rem);
+    padding-top: 4rem;
+    height: 2rem;
+}
+footer {
+    display: inline-flex;
+    text-align: center;
+    z-index: 1000;
+    top: 0;
+    margin-bottom: 5rem;
+    margin-left: 1.2rem;
+}
+.footer-container {
+    display: inline-flex;
+
+}
+footer img {
+    height: 0.7rem;
+    margin-right: 0.5rem;
+    transform: translateY(0.15rem);
+}
+
 
 .content img{
     display: grid;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
+    max-width: 100%; 
 }
 .article {
     margin-bottom: 3rem;
     margin-left: 1rem;
-}
-.type1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-.type1 img {
-    width: 65vw;
-}
-.type2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-.type2 img {
-    width: 40vw;
-}
+    margin-right: 1rem;
 
-footer {
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    text-align: center;
-    z-index: 1000;
-    top: 0;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-style: double;
-    border-color: rgb(212, 212, 212);
-    margin-bottom: 5rem;
+    border: 0;
+    border-top: 2px;
+    border-style: solid;
 }
 
 /* _________ */
