--- a/main.css
+++ b/main.css
@@ -35,23 +35,22 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 1rem;
-    padding-top: 0.2rem;
     text-align: center;
     margin-bottom: 1rem;
 }
 .logo {
-    height: 7rem;
+    height: 4rem;
 }
 .fixed {
     margin-left:auto;
     margin-right: 1.2rem;
-    width: 6rem;
+    width: 7.2rem;
     top: 0.5rem; 
     z-index: 1000;
 }
 .fixed img {
-    transform: translateY(-4rem);
-    padding-top: 4rem;
+    transform: translateY(-3rem);
+    padding-top: 3rem;
     height: 2rem;
 }
 footer {
@@ -92,9 +91,9 @@ footer img {
 
 /* _________ */
 
-header img, footer .hover-footer:hover {
-    text-decoration: underline;
+.content img, .content h3:hover {
     cursor: pointer;
+    color: rgb(56, 56, 56);
 }
 .content img, content h3:hover {
     cursor: pointer;
