--- a/main.css
+++ b/main.css
@@ -4,42 +4,35 @@
     font-weight: 1;
 }
 @font-face {
+    font-family: 'pressura';
+    src: url(GTPressura-Regular.1fb0a10d\(1\).woff2);
+}
+@font-face {
     font-family: 'apparat';
     src: url(KMR-Apparat-Medium.woff);
 }
 @font-face {
-    font-family: 'romek';
-    src: url(d3V2GtHG.woff2);
-}
-@font-face {
-    font-family: 'romek-big';
+    font-family: 'glecb';
     src: url(GLECB.woff);
 }
-h1 {
-    font-family: apparat, Helvetica, sans-serif;
-    font-size: 0.9rem;
+p {
+    font-family: pressura, Arial, Helvetica, sans-serif;
+    font-size: 1.1rem;
+    line-height: 1.2rem;
 }
 h2 {
-    font-family: romek, 'Times New Roman', Times, serif;
+    font-family: apparat, Arial, Helvetica, sans-serif;
     font-size: 0.9rem;
 }
 h3 {
-    font-family: romek-big, 'Times New Roman', Times, serif;
+    font-family: glecb, 'Times New Roman', Times, serif;
     font-size: 5rem;
 }
 
 /* _________ */
 
-header {
-    position: sticky;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin: 1rem;
-    text-align: center;
-    margin-bottom: 1rem;
-}
 .logo {
-    height: 4rem;
+    height: 5rem;
 }
 .fixed {
     margin-left:auto;
@@ -53,6 +46,16 @@ header {
     padding-top: 3rem;
     height: 2rem;
 }
+
+
+header {
+    position: sticky;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 1rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
 footer {
     display: inline-flex;
     text-align: center;
@@ -63,26 +66,38 @@ footer {
 }
 .footer-container {
     display: inline-flex;
-
 }
 footer img {
     height: 0.7rem;
     margin-right: 0.5rem;
     transform: translateY(0.15rem);
+    margin-top: 0.1rem;
 }
 
 
 .content img{
     display: grid;
-    margin-left: auto;
-    margin-right: auto;
     border-radius: 0.5rem;
     max-width: 100%; 
+    transition: scale 0.08s ease-in-out;
 }
 .article {
     margin-bottom: 3rem;
-    margin-left: 1rem;
     margin-right: 1rem;
+    margin-left: 6rem;
+}
+.type1 {
+    display: grid;
+    grid-template-columns: 1fr 0.7fr;
+    
+    border: 0;
+    border-top: 5px;
+    border-style: double;
+    padding-right: 6rem;
+}
+.type2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
     border: 0;
     border-top: 2px;
@@ -91,10 +106,14 @@ footer img {
 
 /* _________ */
 
-.content img, .content h3:hover {
+.article:hover {
     cursor: pointer;
     color: rgb(56, 56, 56);
 }
-.content img, content h3:hover {
+.article:hover img {
     cursor: pointer;
+    scale: 100.5%;
 } 
+.footer-container:hover {
+    cursor: pointer
+}
