--- a/main.css
+++ b/main.css
@@ -182,7 +182,7 @@ footer img {
     border: 0;
     border-top: 5px;
     border-style: double;
-
+    margin-bottom: 20rem;
     padding-top: 3rem;
 }
 .inside p{
