--- a/main.css
+++ b/main.css
@@ -46,21 +46,22 @@ a {
 }
 .fixed img {
     transform: translateY(-5rem);
-    padding-top: 5rem;
+    padding-top: 4.2rem;
     height: 2rem;
 }
 
 
-header {
+.header {
     position: sticky;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin: 1rem;
+    margin: auto;
+    padding: 1rem;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 6rem;
 }
 footer {
-    display: inline-flex;
+    display: none;
     text-align: center;
     z-index: 1000;
     top: 0;
@@ -165,7 +166,9 @@ footer img {
     text-align: center;
 }
 /* _________ */
-
+.header:hover{
+    cursor: pointer;
+}
 .article:hover {
     cursor: pointer;
     color: rgb(56, 56, 56);
